--- a/css/style.css
+++ b/css/style.css
@@ -132,7 +132,7 @@ img {
 }
 
 /* ================= CABEÇALHO & NAV ================= */
-.header{
+#header{
   width: 100%;
   background-color:transparent;
   position:fixed;
@@ -193,10 +193,6 @@ img {
 
 .nav__list {
   display:flex;
-  flex-direction: column;
-  text-align: center;
-  row-gap: 3rem;
-  padding-top: 9rem;
 }
 
 .nav__link {
@@ -218,18 +214,6 @@ transition: .3s;
   top: 1rem;
   right: 1rem;
   cursor:pointer;
-}
-
-/* SHOW MENU */
-.show-menu {
-  right: 0;
-}
-
-/* CHANGE BACKGROUND HEADER */
-.scroll-header {
-  border-radius: 0 0 1rem 1rem;
-  background-color:var(--body-color);
-  box-shadow:0 2px 4px hsla(0, 0%, 1%, 1)
 }
 
 /*  ACTIVE LINK */
@@ -982,7 +966,7 @@ transition: .3s;
   }
 
   .nav{
-      height:calc(var(--header-height) + 1.5rem)
+      margin-top: 15px;
   }
   .nav__toggle,
   .nav__close{
