--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ html{
 body{
     margin: 0px;
     padding-left: 10px;
-    background-color: #0A0A0B;
+    background-color: #1d1d20;
 }
 
 li, a{
@@ -21,7 +21,7 @@ h1, h2, h3, p, a, strong{
 
 section{
     margin-bottom: 90px;
-    padding-top: 70px;
+    /*padding-top: 70px;*/
 }
 
 /*--------------------------------------topo-----------------------------*/
@@ -76,6 +76,11 @@ section{
 
 .titulo-home{
     margin-bottom: 50px;
+}
+
+.banner{
+    background-color: #306BD9;
+    padding: 30px 0px;
 }
 
 .home-img{
