--- a/style.css
+++ b/style.css
@@ -1,12 +1,22 @@
+:root{
+    --color1: #306BD9;
+    --color2: #404040;
+}
+
+
+
 html{
     font-family: Verdana;
     color: white;
+    scroll-behavior: smooth;
+    font-size: 1rem;
 }
 
 body{
     margin: 0px;
-    padding-left: 10px;
-    background-color: #0A0A0B;
+
+    background-color: var(--color2);
+    text-align: center;
 }
 
 li, a{
@@ -24,6 +34,27 @@ section{
     padding-top: 70px;
 }
 
+
+
+/*--------------------------------------botao-----------------------------*/
+
+button{
+    border: 0px;
+}
+
+.botao{
+    position: relative;
+    top: 40px;
+    padding: 20px 40px;
+    background-color: black;
+    border-radius: 5px;
+    transition: 0.5s;
+}
+
+.botao:hover{
+    background-color: #306BD9;
+}
+
 /*--------------------------------------topo-----------------------------*/
 
 #topo{
@@ -32,16 +63,16 @@ section{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #1E2838;
-    background: linear-gradient(0deg, #00000033, #00000033), #1e283885;
+    background: linear-gradient(0deg, #25385c42, #25385c42), #1e283885;
     backdrop-filter: blur(5px);
     height: 60px;
+    z-index: 1;
 }
 
 .logo{
     display: flex;
-    align-items: center;
-    
+    align-items: center;   
+    padding-left: 10px;
 }
 
 .nav{
@@ -63,16 +94,16 @@ section{
 
 
 .menu li:hover{
-    background-color: #306BD9;
+    background-color: var(--color1);
 }
 
-/*--------------------------------------main-----------------------------*/
-
-#corpo{
-    text-align: center;
-    padding-top: 90px;
-    
+.nav-toggle{
+    margin-right: 40px;
+    font-size: 1.25rem;
+    cursor: pointer;
 }
+
+/*--------------------------------------home-----------------------------*/
 
 .titulo-home{
     margin-bottom: 50px;
@@ -91,10 +122,6 @@ section{
     display: grid;
     grid-template-columns: 200px 200px 200px;
     justify-content: center;
-}
-
-.dados div{
-    margin-left: 10px;
 }
 
 .dados h3{
@@ -147,8 +174,10 @@ section{
     padding: 32px 24px 24px 24px;
     margin-left: 30px;
     margin-bottom: 30px;
-    background-color: #111213;
+    background-color: #5B5B5B;
+    border: 1px solid #3a3a3a;
     border-radius: 10px;
+    filter: drop-shadow(0px 4px 4px #00000040);
 }
 
 .carro{
@@ -185,7 +214,7 @@ section{
 }
 
 .comprar:hover{
-    background-color: #306BD9;
+    background-color: var(--color1);
 }
 
 /*--------------------------------------newsletter-----------------------------*/
@@ -193,7 +222,7 @@ section{
 #newsletter{
     margin-top: 90px;
     padding-bottom: 40px;
-    background-color: #ffffff2d;
+    background-color: #4982ee79;
 }
 
 .conteudo{
@@ -213,22 +242,10 @@ section{
     width: 450px;
 }
 
-.botao{
-    position: relative;
-    top: 40px;
-    padding: 20px 40px;
-    background-color: #4b78cc;
-    border-radius: 5px;
-    transition: 0.5s;
-}
-
-.botao:hover{
-    background-color: #306BD9;
-}
-
 /*--------------------------------------rodape-----------------------------*/
 
 #rodape{
+    text-align: left;
     display: grid;
     grid-template-columns: 2fr 1fr 1fr;
     padding-bottom: 20px;
@@ -236,4 +253,5 @@ section{
 
 .desc{
     width: 400px;
+    padding-left: 10px;
 }
