--- a/style.css
+++ b/style.css
@@ -1,13 +1,20 @@
 :root{
     --color1: #306BD9;
-    --color2: #404040;
+    --color2: #000000;
+}
+
+@font-face {
+    font-family: titulo;
+    src: url(fontes/TESLA.ttf) format('truetype');
 }
 
 html{
     font-family: Verdana;
     color: white;
     scroll-behavior: smooth;
-    font-size: 1rem;
+    min-width: 300px;
+    margin: 0px;
+    padding: 0px;
 }
 
 body{
@@ -44,13 +51,13 @@ button{
     position: relative;
     top: 40px;
     padding: 20px 40px;
-    background-color: black;
+    background-color: var(--color1);
     border-radius: 5px;
     transition: 0.5s;
 }
 
 .botao:hover{
-    background-color: #306BD9;
+    box-shadow: 0 0 30px 10px var(--color1);
 }
 
 /*--------------------------------------topo-----------------------------*/
@@ -71,6 +78,10 @@ button{
     display: flex;
     align-items: center;   
     padding-left: 10px;
+}
+
+.logo strong{
+    font-family: titulo;
 }
 
 .nav{
@@ -106,7 +117,7 @@ button{
 }
 
 .home-img{
-    width: 370px;
+    width: 100%;
     margin-bottom: 30px;
 }
 
@@ -116,7 +127,8 @@ button{
 
 .dados{
     display: grid;
-    grid-template-columns: 200px 200px 200px;
+    grid-template-columns: 20% 50% 20%;
+    grid-auto-rows: minmax(300px, 480px);
     justify-content: center;
 }
 
@@ -168,12 +180,17 @@ button{
     width: 210px;
     height: 269px;
     padding: 32px 24px 24px 24px;
-    margin-left: 30px;
-    margin-bottom: 30px;
-    background-color: #5B5B5B;
-    border: 1px solid #3a3a3a;
+    margin-left: 2%;
+    margin-bottom: 2%;
+    background-color: #000000;
+    border: 1px solid var(--color1);
     border-radius: 10px;
     filter: drop-shadow(0px 4px 4px #00000040);
+    font-size: 1em;
+}
+
+.card h3{
+    width: fit-content;
 }
 
 .carro{
