--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ html{
 body{
     margin: 0px;
 
-    background-color: var(--color2);
+    background: linear-gradient(#141e30, #243b55);
     text-align: center;
 }
 
@@ -98,15 +98,22 @@ button{
 }
 
 .menu{
-    display: flex;
-    justify-content: space-around;
-    width: 400px;
+    display: grid;
+    grid-template-columns: repeat(3, 0.8fr) 1fr 0.5fr;
+    align-items: center;
     margin: 0px;
-    padding-right: 25px;
+    height: 60px;
 }
 
 .itens{
-    padding: 20px;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.newsletter-nav{
+    padding: 0px 10px;
 }
 
 .menu li:hover{
@@ -191,11 +198,9 @@ button{
     padding: 32px 24px 24px 24px;
     margin-left: 2%;
     margin-bottom: 2%;
-    background-color: #000000;
-    border: 1px solid var(--primary-color);
+    background-color: #00000080;
+    box-shadow: 6px 10px 25px #00000099;
     border-radius: 10px;
-    filter: drop-shadow(0px 4px 4px #00000040);
-    font-size: 1em;
 }
 
 .card h3{
@@ -245,7 +250,7 @@ button{
 #newsletter{
     margin-top: 90px;
     padding-bottom: 40px;
-    background-color: #4982ee79;
+    background-color: #172135;
 }
 
 .conteudo{
