--- a/css/login.css
+++ b/css/login.css
@@ -13,7 +13,8 @@ body {
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 400px;
+    width: 80%;
+    max-width: 400px;
     padding: 40px;
     transform: translate(-50%, -50%);
     background: rgba(0,0,0,.5);
@@ -164,3 +165,7 @@ body {
      bottom: 100%;
    }
 }
+
+/*--------------------------------------rodape-----------------------------*/
+
+
