--- a/css/style.css
+++ b/css/style.css
@@ -18,12 +18,7 @@ html{
     padding: 0px;
 }
 
-body{
-    margin: 0px;
 
-    background: linear-gradient(#141e30, #243b55);
-    text-align: center;
-}
 
 li, a{
     list-style: none;
@@ -40,15 +35,7 @@ section{
     padding-top: 70px;
 }
 
-::-webkit-scrollbar {
-    width: 0.6rem;
-    background-color: hsla(219, 4%, 16%);
-    border-radius:1rem;
-}
-  ::-webkit-scrollbar-thumb {
-    background-color: hsl(219, 4%, 24%);
-    border-radius: 1rem;
-}
+
 
 /*--------------------------------------botao-----------------------------*/
 
@@ -284,4 +271,110 @@ button{
 .desc{
     width: 400px;
     padding-left: 10px;
+}
+
+/*--------------------------------------responsividade-----------------------------*/
+
+@media (min-width:767px){
+    .nav-toggle{
+        display: none;
+    }   
+}
+
+@media (max-width:767px) {
+
+    html{
+        font-size: 0.8rem;
+    }
+
+    section{
+        margin-bottom: 30px;
+    }
+
+    /*--------------------------------------topo-----------------------------*/
+
+    #topo{
+        background-color: #4D84EC;
+    }
+
+    .menu{
+        display: none;
+    }
+
+    /*--------------------------------------sobre-----------------------------*/
+
+    #Sobre{
+        display:none;
+    }
+
+    /*--------------------------------------card-----------------------------*/
+
+    .conjunto-card{
+        padding-left: 0px;
+        justify-content: left;
+        margin-left: 10px;
+    }
+
+    .card{
+        width: 110px;
+        height: 130px;
+        margin-right: 4%;
+        margin-bottom: 6%;
+        transition: 0.1s;
+        font-size: smaller;
+        cursor: pointer;
+    }
+
+    .card:active{
+        background-color: rgba(137, 198, 255, 0.795);
+    }
+
+
+    .carro{ 
+        width: 100%;
+        margin-left: 0px;
+    }
+
+    .info{
+        display: none;
+    }
+
+    .comprar{
+        display: none;
+    }
+
+    /*--------------------------------------newsletter-----------------------------*/
+
+    #newsletter{
+        margin-top: 0px;
+    }
+
+    .conteudo img{
+        display: none;
+    }
+
+    .conteudo p{
+        padding: 0px 10px;
+    }
+    
+    /*--------------------------------------rodape-----------------------------*/
+
+    #rodape{
+        display: inherit;
+    }
+    
+    .desc{
+        width: 90%;
+    }
+
+    .informaçoes, .redes{
+        display: none;
+    }
+}
+
+@media (max-width: 370px) {
+    .card{
+        box-shadow: 4px 7px 25px #00000075;
+        margin: 0px 7px 15px 0px;
+    }
 }
