--- a/css/style.css
+++ b/css/style.css
@@ -18,8 +18,6 @@ html{
     padding: 0px;
 }
 
-
-
 li, a{
     list-style: none;
     text-decoration: none;
@@ -34,8 +32,6 @@ section{
     margin-bottom: 90px;
     padding-top: 70px;
 }
-
-
 
 /*--------------------------------------botao-----------------------------*/
 
@@ -93,10 +89,11 @@ button{
 }
 
 .itens{
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    height: 100%;  
+}
+
+.itens a{
+    line-height: 67px;
 }
 
 .newsletter-nav{
@@ -114,31 +111,11 @@ button{
 }
 
 /*--------------------------------------home-----------------------------*/
-
-.titulo-home{
-    margin-bottom: 50px;
-}
-
 .home-img{
     width: 100%;
     margin-bottom: 30px;
 }
 
-.nome{
-    margin-bottom: 20px;
-}
-
-.dados{
-    display: grid;
-    grid-template-columns: 20% 50% 20%;
-    grid-auto-rows: minmax(300px, 480px);
-    justify-content: center;
-}
-
-.dados h3{
-    margin-bottom: 10px;
-}
- 
 /*--------------------------------------sobre-----------------------------*/
 
 #Sobre{
@@ -190,7 +167,29 @@ button{
     border-radius: 10px;
 }
 
+.dash{
+    background-image: url("../imagens/icones/dashboard.svg");
+    background-repeat: no-repeat;
+    background-position: center left;
+    padding-left: 30px;
+    line-height: 24px;
+}
 
+.tipo{
+    background-image: url("../imagens/icones/posto.svg");
+    background-repeat: no-repeat;
+    background-position: center left;
+    padding-left: 30px;
+    line-height: 24px;
+}
+
+.velocidade{
+    background-image: url("../imagens/icones/velocidade.svg");
+    background-repeat: no-repeat;
+    background-position: center left;
+    padding-left: 30px;
+    line-height: 24px;
+}
 
 .card h3{
     width: fit-content;
@@ -204,15 +203,8 @@ button{
 .info{
     margin: 10px 0px;
     width: 250px;
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.info div{
-    display: flex;
-    justify-content:flex-start;
-    align-items: flex-start;
-    margin-right: 30px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
 }
 
 .info div img{
@@ -227,7 +219,7 @@ button{
     border-radius: 10px 0px 10px 0px;
     background-color: var(--primary-color-light);
     transition: 0.5s;
-    cursor:pointer
+    cursor:pointer;
 }
 
 .comprar:hover{
@@ -237,8 +229,7 @@ button{
 /*--------------------------------------newsletter-----------------------------*/
 
 #newsletter{
-    margin-top: 90px;
-    padding-bottom: 40px;
+    padding-bottom: 100px;
     background-color: #172135;
 }
 
